Actions
Bug #6026
closedZero-padded IP address strings returned by SMB
Start date:
2015-06-21
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
needs-triage
Gerrit CR:
Description
When using MMC to list connected users, Windows has long delays updating the display for each user.
It has problems looking up the zero-padded IP addresses (it appears to not recognize them as IP addresses at all, and tries NetBIOS name resolution, which times out every time)
Related issues
Updated by Marcel Telka almost 7 years ago
- Related to Feature #5980: in-kernel inet_ntop should format IPv4 addresses like userland one added
Updated by Electric Monk over 6 years ago
- Status changed from New to Closed
- % Done changed from 0 to 100
git commit 49b5df1eac768235abeb210f61310e88b7d172b6
commit 49b5df1eac768235abeb210f61310e88b7d172b6 Author: Gordon Ross <gwr@nexenta.com> Date: 2015-10-04T15:58:43.000Z 6026 Zero-padded IP address strings returned by SMB Reviewed by: Yuri Pankov <yuri.pankov@nexenta.com> Reviewed by: Kevin Crowe <kevin.crowe@nexenta.com> Reviewed by: Dan McDonald <danmcd@omniti.com> Approved by: Garrett D'Amore <garrett@damore.org>
Updated by Yuri Pankov over 2 years ago
- Related to Bug #11647: 6026 regressed after 5980 added
Actions