6026 Zero-padded IP address strings returned by SMB Reviewed by: Yuri Pankov <yuri.pankov@nexenta.com> Reviewed by: Kevin Crowe <kevin.crowe@nexenta.com> Reviewed by: Dan McDonald <danmcd@omniti.com> Approved by: Garrett D'Amore <garrett@damore.org>