usr/src/uts/common/fs/smbsrv/smb_session.c
@@ -51,7 +51,6 @@ static smb_user_t *smb_session_lookup_user(smb_session_t *, char *, char *);
 static smb_tree_t *smb_session_get_tree(smb_session_t *, smb_tree_t *);
 static void smb_session_logoff(smb_session_t *);
 static void smb_request_init_command_mbuf(smb_request_t *sr);
-void dump_smb_inaddr(smb_inaddr_t *ipaddr);
 static void smb_session_genkey(smb_session_t *);
 
 void
@@ -290,8 +289,8 @@ smb_session_xprt_gethdr(smb_session_t *session, smb_xprt_t *ret_hdr)
 		ret_hdr->xh_type = buf[0];
 
 		if (ret_hdr->xh_type != 0) {
-			cmn_err(CE_WARN, "invalid type (%u)", ret_hdr->xh_type);
-			dump_smb_inaddr(&session->ipaddr);
+			cmn_err(CE_WARN, "invalid NBT type (%u) from %s",
+			    ret_hdr->xh_type, session->ip_addr_str);
 			return (EPROTO);
 		}
 
@@ -302,7 +301,6 @@ smb_session_xprt_gethdr(smb_session_t *session, smb_xprt_t *ret_hdr)
 
 	default:
 		cmn_err(CE_WARN, "invalid port %u", session->s_local_port);
-		dump_smb_inaddr(&session->ipaddr);
 		return (EPROTO);
 	}
 
@@ -339,7 +337,6 @@ smb_session_xprt_puthdr(smb_session_t *session, smb_xprt_t *hdr,
 
 	default:
 		cmn_err(CE_WARN, "invalid port %u", session->s_local_port);
-		dump_smb_inaddr(&session->ipaddr);
 		return (-1);
 	}
 
@@ -688,6 +685,8 @@ smb_session_create(ksocket_t new_so, uint16_t port, smb_server_t *sv,
 		session->local_ipaddr.a_family = family;
 		session->s_local_port = port;
 		session->sock = new_so;
+		(void) smb_inet_ntop(&session->ipaddr,
+		    session->ip_addr_str, INET6_ADDRSTRLEN);
 		if (port == IPPORT_NETBIOS_SSN)
 			smb_server_inc_nbt_sess(sv);
 		else
@@ -1253,12 +1252,6 @@ smb_session_logoff(smb_session_t *session)
 void
 smb_session_getclient(smb_session_t *sn, char *buf, size_t buflen)
 {
-	char		ipbuf[INET6_ADDRSTRLEN];
-	smb_inaddr_t	*ipaddr;
-
-	ASSERT(sn);
-	ASSERT(buf);
-	ASSERT(buflen);
 
 	*buf = '\0';
 
@@ -1267,9 +1260,7 @@ smb_session_getclient(smb_session_t *sn, char *buf, size_t buflen)
 		return;
 	}
 
-	ipaddr = &sn->ipaddr;
-	if (smb_inet_ntop(ipaddr, ipbuf, SMB_IPSTRLEN(ipaddr->a_family)))
-		(void) strlcpy(buf, ipbuf, buflen);
+	(void) strlcpy(buf, sn->ip_addr_str, buflen);
 }
 
 /*
@@ -1285,19 +1276,13 @@ smb_session_getclient(smb_session_t *sn, char *buf, size_t buflen)
 boolean_t
 smb_session_isclient(smb_session_t *sn, const char *client)
 {
-	char		buf[INET6_ADDRSTRLEN];
-	smb_inaddr_t	*ipaddr;
 
 	client += strspn(client, "\\");
 
 	if (smb_strcasecmp(client, sn->workstation, 0) == 0)
 		return (B_TRUE);
 
-	ipaddr = &sn->ipaddr;
-	if (smb_inet_ntop(ipaddr, buf, SMB_IPSTRLEN(ipaddr->a_family)) == NULL)
-		return (B_FALSE);
-
-	if (smb_strcasecmp(client, buf, 0) == 0)
+	if (smb_strcasecmp(client, sn->ip_addr_str, 0) == 0)
 		return (B_TRUE);
 
 	return (B_FALSE);
@@ -1388,17 +1373,6 @@ smb_request_free(smb_request_t *sr)
 	cv_destroy(&sr->sr_ncr.nc_cv);
 	mutex_destroy(&sr->sr_mutex);
 	kmem_cache_free(smb_cache_request, sr);
-}
-
-void
-dump_smb_inaddr(smb_inaddr_t *ipaddr)
-{
-	char ipstr[INET6_ADDRSTRLEN];
-
-	if (smb_inet_ntop(ipaddr, ipstr, SMB_IPSTRLEN(ipaddr->a_family)))
-		cmn_err(CE_WARN, "error ipstr=%s", ipstr);
-	else
-		cmn_err(CE_WARN, "error converting ip address");
 }
 
 boolean_t
